--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
+        "opcodesio/log-viewer": "^3.15",
         "yajra/laravel-datatables": "^12.0"
     },
     "require-dev": {
